<resources>
    <string name="app_name">MaterialApp</string>
    <string name="action_settings">Settings</string>

    <string name="stub_text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>

    <string name="expanded_title">Item details</string>
    <string name="collapsed_title">Passport Health – Travel Vaccinations</string>
    <string name="label_history">History</string>
    <string name="label_medical_centers">Medical centers</string>
    <string name="label_family">Family</string>
    <string name="label_set_time">SET TIME</string>
    <string name="label_for_the_diagnostic">for the Diagnostic</string>
    <string name="label_about">About:</string>
    <string name="text_points">You can pay for services using your points</string>
    <string name="text_about">Since 1980, International Medical Lab has been providing physicians with the fast and accurate lab results</string>
    <string name="label_address">Address:</string>
    <string name="label_street">Street:</string>
    <string name="label_sector">Sector:</string>
    <string name="label_municipality">Municipality:</string>
    <string name="label_province">province:</string>
    <string name="label_country">Country:</string>
    <string name="label_business_days">Monday - Friday</string>
    <string name="text_business_hours">9:00 a.m. - 6:00 p.m.</string>
    <string name="label_saturday">Saturday</string>
    <string name="label_sunday">Sunday</string>
    <string name="label_closed">Closed</string>
    <string name="text_saturday_hours">10:00 a.m. - 14:00 p.m.</string>
    <string name="label_hours">Hours</string>

</resources>
