<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#BBC5D0"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="@id/guideline_top">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image_star"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/avd_anim_start"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Points pay available"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/image_star"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/subtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_points"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        app:layout_constraintEnd_toEndOf="@id/title"
                        app:layout_constraintStart_toStartOf="@id/title"
                        app:layout_constraintTop_toBottomOf="@id/title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headline_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/label_about"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/card_points" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingMultiplier="1.25"
                android:text="@string/text_about"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#686B7E"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/headline_about" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headline_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="@string/label_address"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/text_about" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_street"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_street"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#686B7E"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/headline_address" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_sector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_sector"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#686B7E"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/label_street" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_municipality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_municipality"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#686B7E"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/label_sector" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_province"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_province"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#686B7E"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/label_municipality" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_country"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#686B7E"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/label_province" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headline_hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="@string/label_address"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/label_country" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_business_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_business_days"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#686B7E"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/headline_hours" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_business_hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_business_hours"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/headline_hours" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_saturday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_saturday"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#686B7E"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/text_business_hours" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_saturday_hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_saturday_hours"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/text_business_hours" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_sunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_sunday"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="#686B7E"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/label_saturday" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_sunday_hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_closed"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/label_saturday" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>